syntax = "proto3";

package syft.grid.connections;

message GridHTTPConnection {
  string base_url = 1;
}
